--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #fcb4dc;
+    background-color: #fba3cc;
     color: white;
     display: flex;
     justify-content: space-around;
