--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#fbc7e2,#fbe6f1);
+    background-image: linear-gradient(#fba3cc,#fbc7e2);
     color:white;
     display: flex;
     justify-content: center;
