--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ body {
     align-items:center;
     padding: 20px 0;
 }
-.cabecalho-alura{
+.cabecalho-logo{
     width: 10%;
 }
 .cabecalho-imagem{
-     width: 40%;
+     width: 10%;
     
     
 }
@@ -28,12 +28,12 @@ body {
     font-size: 25px;
 }
 
-.escola-imagem{
+.music-imagem{
     width: 10%;
     
 }
 
-.escola{
+.music{
     background-image: linear-gradient(#fba3cc,#fbc7e2);
     color:white;
     display: flex;
@@ -42,38 +42,38 @@ body {
     padding: 24px 0;
 }
 
-.escola-div-conteudo{
+.music-div-conteudo{
     width: 35%;
 }
 
 
-.escola-titulo{
+.music-titulo{
     padding: 34px 0;
 }
 
-.estudante{
+.music{
     padding: 24px 0;
 }
-.estudante-imagem{
+.music-imagem{
     width: 140px;
 }
 
-.estudante-icone{
+.music-icone{
     width: 25px;
     padding: 4px 8px;
 }
 
-.estudante-div{
+.music-div{
     text-align: center;
     padding: 16px 0;
 }
 
-.estudante-titulo{
+.music-titulo{
     text-align: center;
     padding: 20px 0;
 }
 
-.estudante-todos{
+.music-all{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     background-color: rgba(156, 174, 177, 0.411);
