--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
 
 .music{
     padding: 24px 0;
-    justify-content: center space-between;
+    justify-content: space-between;
+    display: flex;
 }
 .music-imagem{
     width: 140px;
