--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ body {
 
 .music{
     padding: 24px 0;
-    justify-content: space-between;
-    display: inline-block;
+    justify-content: space-around;
+    display: flex;
 }
 .music-imagem{
     width: 140px;
