--- a/style.css
+++ b/style.css
@@ -75,10 +75,9 @@ body {
     padding: 20px 0;
 }
 
-.music-all{
+.music-all {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    background-color: rgba(156, 174, 177, 0.411);
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .rodape{
