--- a/style.css
+++ b/style.css
@@ -75,7 +75,11 @@ body {
 
 .music-all {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
+    gap: 20px; /* Espaçamento entre as imagens */
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 .rodape{
