--- a/codigo/style.css
+++ b/codigo/style.css
@@ -13,11 +13,11 @@ body {
     align-items:center;
     padding: 20px 0;
 }
-.cabecalho-logo{
+.cabecalho-alura{
     width: 10%;
 }
 .cabecalho-imagem{
-     width: 40%;
+     width: 10%;
     
     
 }
@@ -28,12 +28,12 @@ body {
     font-size: 25px;
 }
 
-.musica2-imagem{
+.play-list-imagem{
     width: 10%;
     
 }
 
-.musica2{
+.play-list{
     background-image: linear-gradient(#fba3cc,#fbc7e2);
     color:white;
     display: flex;
@@ -42,23 +42,20 @@ body {
     padding: 24px 0;
 }
 
-.musica2-div-conteudo{
+.play-list-div-conteudo{
     width: 35%;
 }
 
 
-.musica2-titulo{
+.play-list-titulo{
     padding: 34px 0;
 }
 
 .music{
     padding: 24px 0;
 }
-.music-imagem {
-    width: 100%; /* As imagens se ajustam ao tamanho da coluna */
-    max-width: 140px; /* Limite para não ficarem muito grandes */
-    display: block;
-    margin: 0 auto;
+.music-imagem{
+    width: 140px;
 }
 
 .music-icone{
@@ -66,8 +63,9 @@ body {
     padding: 4px 8px;
 }
 
-.music-div {
+.music-div{
     text-align: center;
+    padding: 16px 0;
 }
 
 .music-titulo{
@@ -75,13 +73,10 @@ body {
     padding: 20px 0;
 }
 
-.music-all {
+.music-todos{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); 
-    gap: 20px; /* Espaçamento entre as imagens */
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    background-color: rgba(156, 174, 177, 0.411);
 }
 
 .rodape{
