--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 .rodape{
-    background-color: rgba(0, 81, 255, 0.575);
+    background-color: #fba3cc;
     text-align: center;
 }
 
