--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #fffb005e;
+    background-color: #fba3cc;
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
@@ -34,7 +34,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#fffb005e,#a10202da);
+    background-image: linear-gradient(#fba3cc,#fbc7e2);
     color:rgb(248, 246, 248);
     display: flex;
     justify-content: center;
@@ -76,11 +76,11 @@ s.estudante-div{
 .estudante-todos{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    background-color: rgba(252, 253, 180, 0.829);
+    background-color: #fba3cc(252, 253, 180, 0.829);
 }
 
 .rodape{
-    background-color: rgba(255, 0, 170, 0.301);
+    background-color: #fba3cc(255, 0, 170, 0.301);
     text-align: center;
 }
 
